[gd_scene load_steps=23 format=2]

[ext_resource path="res://pck/assets/shankoemee/lose.png" type="Texture" id=1]
[ext_resource path="res://pck/assets/common/emoji/emoji.tres" type="SpriteFrames" id=2]
[ext_resource path="res://pck/assets/bugyee/label-1.png" type="Texture" id=3]
[ext_resource path="res://pck/assets/common/panel-1.png" type="Texture" id=5]
[ext_resource path="res://pck/assets/common/profiles/0.png" type="Texture" id=6]
[ext_resource path="res://pck/assets/shweshan/shweshan_player.gd" type="Script" id=10]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://pck/assets/common/joystick.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://pck/assets/common/WINRESEA.TTF" type="DynamicFontData" id=13]
[ext_resource path="res://pck/assets/common/cards/back.png" type="Texture" id=14]
[ext_resource path="res://pck/assets/common/profile-frame.png" type="Texture" id=16]
[ext_resource path="res://pck/assets/shankoemee/2x.png" type="Texture" id=17]
[ext_resource path="res://pck/assets/common/messages/bet_more.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=276]
size = 35
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=277]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Label:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Label:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Label:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -60, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Label:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=278]
resource_name = "show"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Label:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -60, -0.25, 0, 0.25, 0, -60, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5, 2 )
}

[sub_resource type="StyleBoxTexture" id=267]
texture = ExtResource( 5 )
region_rect = Rect2( 0, -10, 200, 210 )
margin_left = 60.0
margin_right = 60.0
margin_top = 80.0
margin_bottom = 60.0

[sub_resource type="DynamicFont" id=268]
size = 15
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=283]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=279]
size = 40
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=284]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Message:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Message:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=285]
resource_name = "show"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Message:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 1.6, 1.8, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Message:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 1.6, 1.8, 2 )
}

[node name="Player" type="Node2D"]
position = Vector2( 900, 720 )
script = ExtResource( 10 )

[node name="TransferBalance" type="Node2D" parent="."]
position = Vector2( 0, -60 )
z_index = 2

[node name="Label" type="Label" parent="TransferBalance"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -60.0
margin_right = 60.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.588235 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 276 )
text = "+1000"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransferBalance"]
anims/RESET = SubResource( 277 )
anims/show = SubResource( 278 )

[node name="Profile" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Frame" type="Sprite" parent="Profile"]
z_index = 1
texture = ExtResource( 16 )

[node name="Panel" type="Panel" parent="."]
margin_left = -60.0
margin_top = 60.0
margin_right = 60.0
margin_bottom = 140.0
custom_styles/panel = SubResource( 267 )

[node name="Nickname" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 268 )
text = "Nickname"
align = 1
valign = 1

[node name="Balance" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 283 )
text = "3000"
align = 1
valign = 1

[node name="ResultFlag" type="Sprite" parent="."]
position = Vector2( 0, -30 )
z_index = 2
texture = ExtResource( 1 )

[node name="Emoji" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
z_index = 1
frames = ExtResource( 2 )
playing = true

[node name="CardPos" type="Node2D" parent="."]
position = Vector2( 200, 20 )

[node name="card1" type="Sprite" parent="CardPos"]
position = Vector2( -60, -104 )
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 14 )

[node name="card2" type="Sprite" parent="CardPos"]
position = Vector2( 0, -104 )
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 14 )

[node name="card3" type="Sprite" parent="CardPos"]
position = Vector2( -90, -17 )
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 14 )

[node name="card4" type="Sprite" parent="CardPos"]
position = Vector2( -30, -17 )
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 14 )

[node name="card5" type="Sprite" parent="CardPos"]
position = Vector2( 30, -17 )
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 14 )

[node name="card6" type="Sprite" parent="CardPos"]
position = Vector2( -90, 70 )
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 14 )

[node name="card7" type="Sprite" parent="CardPos"]
position = Vector2( -30, 70 )
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 14 )

[node name="card8" type="Sprite" parent="CardPos"]
position = Vector2( 30, 70 )
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 14 )

[node name="CardStatus" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.862745 )
position = Vector2( 170, 109 )
z_index = 2

[node name="BG" type="Sprite" parent="CardStatus"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CardStatus/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -30.0
margin_right = -120.0
margin_bottom = -30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 279 )
text = "tukef 9"
align = 1
valign = 1

[node name="Multiplier" type="Sprite" parent="CardStatus/BG"]
position = Vector2( 125, 1.25 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 17 )

[node name="Message" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
z_index = 2
texture = ExtResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Message"]
root_node = NodePath("../..")
anims/RESET = SubResource( 284 )
anims/show = SubResource( 285 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
